==========
Change log
==========

1.4.1 (unreleased)
==================

Features
--------

- Added support for Python 2.6.

Bug fixes
---------

- When copying a person, the creation dates and modification dates of the
  addresses in the copied person are changed along the person.


Other changes
-------------

- Updated to `Zope Toolkit 1.0c1`_ for dependent packages.

.. _`Zope Toolkit 1.0c1`: http://docs.zope.org/zopetoolkit/releases/overview-1.0c1.html


1.4.0 (2010-08-19)
==================

Features
--------

- Added user preferences to customize the columns displayed in person list.

- Added batching to person list (customizable in the user preferences).

- Each table shows its rows in alternating colors.


Other changes
-------------

- Using `Zope Toolkit 1.0a2`_ instead of managing our own versions of
  dependent packages.

.. _`Zope Toolkit 1.0a2`: http://docs.zope.org/zopetoolkit/releases/overview-1.0a2.html

1.3.0 (2010-03-20)
==================

- Feature: Replaced `Simple single keyword search` by `Keyword search` which
  allows to search for multiple keywords concatenated by `and` or `or`.


1.2.0 (2010-02-06)
==================

- Feature: Added ability to clone a person.


1.1.2 (2010-01-27)
==================

- Search result table displayed only 50 entries. Now it displays all
  search results ordered by name.


1.1.1 (2010-01-25)
==================

- Fixed version of `icemac.ab.locales`.


1.1.0 (2010-01-25)
==================

Features
--------

- Added translation to XLS export files.

- Added creator, last modifier and modification date metadata to
  objects.

Bugfixes
--------

- When two users are exporting at the same time this could end in
  broken export files.

- On the person edit form:

  - the the last modification dates of the entries (postal address,
    phone number etc.) where the one of the person.

  - the keywords field was not correctly implemented: it was always