@@ -1,1 +1,3 @@
-# Make this directory a package
+copyright = '''
+# Copyright (c) 2008-2010 Michael Howitz
+'''[13:-1]
